--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -42,7 +42,7 @@ common: &default_settings
   #       - Ajax Service
   #       - All Services
   #
-  app_name: As My MD..
+  app_name: Ask My MD..
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
